# facturacion

./: docker-compose.yml
facturacion/: Dockerfile  pyproject.toml
facturacion/cfdi/: admin.py  invoice.py  models.py  serializers.py  urls.py  views.py
facturacion/cfdi/migrations/: 0001_initial.py  0002_invoices_invoice_pdf_invoices_invoice_xml.py  0003_alter_invoices_created_at.py  0004_invoices_user.py  0005_smtp_alter_invoices_user.py  0006_remove_users_email.py
facturacion/facturacion/: settings.py  urls.py
nextjs-facturacion/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
nextjs-facturacion/actions/: invoice.tsx
nextjs-facturacion/app/: layout.tsx  page.tsx
nextjs-facturacion/app/api/: route.tsx
nextjs-facturacion/app/download/: client.tsx  page.tsx
nextjs-facturacion/app/email/: client.tsx  page.tsx
nextjs-facturacion/app/facturacion/: client.tsx  page.tsx
nextjs-facturacion/app/search/: client.tsx  page.tsx
nextjs-facturacion/catalogos_sat/: catalogos.tsx
nextjs-facturacion/components/: alert.tsx  facturar.tsx
nextjs-facturacion/stores/: invoices.tsx
